--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,7 +334,7 @@ header .navbar ul li a:hover {
     margin-top: 12rem;
   }
   .home .image img {
-    margin-top: -12rem;
+    margin-top: -14rem;
   }
   .home .content p {
     font-size: 2.2rem;
@@ -410,6 +410,7 @@ header .navbar ul li a:hover {
 }
 .resumebtn {
   margin-top: 6rem;
+
 }
 .resumebtn .btn {
   padding: 1.7rem 3rem;
@@ -1090,6 +1091,17 @@ form .button-area {
 /* contact section ends */
 
 /* footer section starts */
+#adminBtn{
+  padding:8px 20px;
+  border:1px solid #024a57;
+  border-radius: 5px;
+  cursor: pointer;
+}
+#adminBtn:hover{
+  background: #f48989;
+  scale: calc(0.9);
+  transition-duration: 500ms;
+}
 .footer {
   min-height: auto;
   padding-top: 0;
